--- a/archives/toutiao-search/2023-10-18.md
+++ b/archives/toutiao-search/2023-10-18.md
@@ -1,67 +1,81 @@
 # 2023-10-18
 
-共 99 条
+共 110 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Oct 18 2023 07:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Oct 18 2023 08:24:17 GMT+0800 (China Standard Time) -->
 1. [普京抵达人民大会堂](https://so.toutiao.com/search?keyword=普京抵达人民大会堂)
-1. [43岁男子感慨自己是“四无人员”](https://so.toutiao.com/search?keyword=43岁男子感慨自己是“四无人员”)
+1. [女子顶着保安开车入库 医院回应](https://so.toutiao.com/search?keyword=女子顶着保安开车入库+医院回应)
 1. [全力以赴保障粮食丰收](https://so.toutiao.com/search?keyword=全力以赴保障粮食丰收)
 1. [普京抵达北京哪些信息值得关注](https://so.toutiao.com/search?keyword=普京抵达北京哪些信息值得关注)
+1. [路遇恶犬怎么办？训犬师详解](https://so.toutiao.com/search?keyword=路遇恶犬怎么办？训犬师详解)
+1. [巴以冲突已致双方超4400人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超4400人死亡)
+1. [车主遇人肉占车位 直接下车离开](https://so.toutiao.com/search?keyword=车主遇人肉占车位+直接下车离开)
+1. [杨紫琼等8人当选国际奥委会委员](https://so.toutiao.com/search?keyword=杨紫琼等8人当选国际奥委会委员)
+1. [无锡工厂爆燃致2死3伤为假消息](https://so.toutiao.com/search?keyword=无锡工厂爆燃致2死3伤为假消息)
+1. [苹果CEO库克谈王者荣耀：风靡全球](https://so.toutiao.com/search?keyword=苹果CEO库克谈王者荣耀：风靡全球)
+1. [曝以色列在消灭哈马斯前不考虑停火](https://so.toutiao.com/search?keyword=曝以色列在消灭哈马斯前不考虑停火)
+1. [女明星外穿钻石内裤惹争议](https://so.toutiao.com/search?keyword=女明星外穿钻石内裤惹争议)
+1. [特朗普对巴以冲突最新表态](https://so.toutiao.com/search?keyword=特朗普对巴以冲突最新表态)
+1. [以称不会因拜登推迟在加沙地面行动](https://so.toutiao.com/search?keyword=以称不会因拜登推迟在加沙地面行动)
+1. [联合国称以色列可能构成国际犯罪](https://so.toutiao.com/search?keyword=联合国称以色列可能构成国际犯罪)
+1. [哈马斯首次公布被扣人质视频画面](https://so.toutiao.com/search?keyword=哈马斯首次公布被扣人质视频画面)
+1. [江映蓉偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=江映蓉偶遇苹果CEO库克)
+1. [外媒：以正将美国拖入与伊朗的战争](https://so.toutiao.com/search?keyword=外媒：以正将美国拖入与伊朗的战争)
+1. [媒体评“紫薯非薯”争议](https://so.toutiao.com/search?keyword=媒体评“紫薯非薯”争议)
+1. [两名缅北电诈头目身份曝光](https://so.toutiao.com/search?keyword=两名缅北电诈头目身份曝光)
+1. [河南一楼盘现“豆腐渣”楼板](https://so.toutiao.com/search?keyword=河南一楼盘现“豆腐渣”楼板)
+1. [夫妻30岁裸辞旅行治愈百万网友](https://so.toutiao.com/search?keyword=夫妻30岁裸辞旅行治愈百万网友)
+1. [“科目三”舞蹈怎么跳](https://so.toutiao.com/search?keyword=“科目三”舞蹈怎么跳)
+1. [外交部回应日本歌手谷村新司去世](https://so.toutiao.com/search?keyword=外交部回应日本歌手谷村新司去世)
+1. [地球进入“沸腾时代”](https://so.toutiao.com/search?keyword=地球进入“沸腾时代”)
+1. [郭艾伦：我腿完蛋了](https://so.toutiao.com/search?keyword=郭艾伦：我腿完蛋了)
+1. [被咬伤女童若手术探查或面临摘肾](https://so.toutiao.com/search?keyword=被咬伤女童若手术探查或面临摘肾)
+1. [华为手机整体销量超越苹果](https://so.toutiao.com/search?keyword=华为手机整体销量超越苹果)
+1. [英格兰3-1双杀意大利晋级欧洲杯](https://so.toutiao.com/search?keyword=英格兰3-1双杀意大利晋级欧洲杯)
+1. [司机帮乘客取行李 自己的车被撞飞](https://so.toutiao.com/search?keyword=司机帮乘客取行李+自己的车被撞飞)
+1. [张若昀《庆余年》第二季杀青](https://so.toutiao.com/search?keyword=张若昀《庆余年》第二季杀青)
+1. [央广网：杜绝狗咬人要盯住养狗人](https://so.toutiao.com/search?keyword=央广网：杜绝狗咬人要盯住养狗人)
+1. [南航回应飞机餐发4个馒头1片白菜](https://so.toutiao.com/search?keyword=南航回应飞机餐发4个馒头1片白菜)
+1. [哈马斯证实一高级指挥官死亡](https://so.toutiao.com/search?keyword=哈马斯证实一高级指挥官死亡)
+1. [网传威马汽车创始人“出走”海外](https://so.toutiao.com/search?keyword=网传威马汽车创始人“出走”海外)
+1. [成都回复“野狗整治”：已部署整治](https://so.toutiao.com/search?keyword=成都回复“野狗整治”：已部署整治)
+1. [宋仲基海外试镜全部被淘汰](https://so.toutiao.com/search?keyword=宋仲基海外试镜全部被淘汰)
+1. [iPhone15Pro被曝生产成本523美元](https://so.toutiao.com/search?keyword=iPhone15Pro被曝生产成本523美元)
+1. [以色列货币“失血不止”](https://so.toutiao.com/search?keyword=以色列货币“失血不止”)
+1. [临沂马拉松冠军冲线时志愿者没松绳](https://so.toutiao.com/search?keyword=临沂马拉松冠军冲线时志愿者没松绳)
+1. [德国总理朔尔茨走红毯“迷路了”](https://so.toutiao.com/search?keyword=德国总理朔尔茨走红毯“迷路了”)
+1. [成都济南合肥取消地价限制](https://so.toutiao.com/search?keyword=成都济南合肥取消地价限制)
+1. [阿奇霉素“火出圈”](https://so.toutiao.com/search?keyword=阿奇霉素“火出圈”)
+1. [苹果将捐款2500万支持中国乡村发展](https://so.toutiao.com/search?keyword=苹果将捐款2500万支持中国乡村发展)
+1. [女子开车去医院 保安称车位已满阻拦](https://so.toutiao.com/search?keyword=女子开车去医院+保安称车位已满阻拦)
+1. [媒体：农忙时节别给农民添乱](https://so.toutiao.com/search?keyword=媒体：农忙时节别给农民添乱)
+1. [书展主办方挺以色列 马来西亚退出](https://so.toutiao.com/search?keyword=书展主办方挺以色列+马来西亚退出)
+1. [儿童支原体感染近期高发](https://so.toutiao.com/search?keyword=儿童支原体感染近期高发)
+1. [埃及前外长谈如何缓和巴以冲突](https://so.toutiao.com/search?keyword=埃及前外长谈如何缓和巴以冲突)
+1. [网友去台湾旅游总结8个特点](https://so.toutiao.com/search?keyword=网友去台湾旅游总结8个特点)
+1. [43岁男子感慨自己是“四无人员”](https://so.toutiao.com/search?keyword=43岁男子感慨自己是“四无人员”)
 1. [司机发现车后座躺了个婴儿](https://so.toutiao.com/search?keyword=司机发现车后座躺了个婴儿)
 1. [街道办回应男子自捆双脚跳河自尽](https://so.toutiao.com/search?keyword=街道办回应男子自捆双脚跳河自尽)
-1. [外交部回应日本歌手谷村新司去世](https://so.toutiao.com/search?keyword=外交部回应日本歌手谷村新司去世)
 1. [《庆余年2》公布新角色剧照](https://so.toutiao.com/search?keyword=《庆余年2》公布新角色剧照)
-1. [无锡工厂爆燃致2死3伤为假消息](https://so.toutiao.com/search?keyword=无锡工厂爆燃致2死3伤为假消息)
 1. [美国天然气“老赖”坑了中石化](https://so.toutiao.com/search?keyword=美国天然气“老赖”坑了中石化)
-1. [曝以色列在消灭哈马斯前不考虑停火](https://so.toutiao.com/search?keyword=曝以色列在消灭哈马斯前不考虑停火)
-1. [特朗普对巴以冲突最新表态](https://so.toutiao.com/search?keyword=特朗普对巴以冲突最新表态)
-1. [哈马斯首次公布被扣人质视频画面](https://so.toutiao.com/search?keyword=哈马斯首次公布被扣人质视频画面)
-1. [以称不会因拜登推迟在加沙地面行动](https://so.toutiao.com/search?keyword=以称不会因拜登推迟在加沙地面行动)
-1. [女明星外穿钻石内裤惹争议](https://so.toutiao.com/search?keyword=女明星外穿钻石内裤惹争议)
-1. [外媒：以正将美国拖入与伊朗的战争](https://so.toutiao.com/search?keyword=外媒：以正将美国拖入与伊朗的战争)
-1. [江映蓉偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=江映蓉偶遇苹果CEO库克)
 1. [高中同学车祸失忆全班守护18年](https://so.toutiao.com/search?keyword=高中同学车祸失忆全班守护18年)
-1. [地球进入“沸腾时代”](https://so.toutiao.com/search?keyword=地球进入“沸腾时代”)
 1. [丹麦王室寻找遗落鞋子的“灰姑娘”](https://so.toutiao.com/search?keyword=丹麦王室寻找遗落鞋子的“灰姑娘”)
-1. [河南一楼盘现“豆腐渣”楼板](https://so.toutiao.com/search?keyword=河南一楼盘现“豆腐渣”楼板)
-1. [杨紫琼等8人当选国际奥委会委员](https://so.toutiao.com/search?keyword=杨紫琼等8人当选国际奥委会委员)
 1. [山东东营：当黄河遇到大海](https://so.toutiao.com/search?keyword=山东东营：当黄河遇到大海)
-1. [司机帮乘客取行李 自己的车被撞飞](https://so.toutiao.com/search?keyword=司机帮乘客取行李+自己的车被撞飞)
-1. [苹果CEO库克谈王者荣耀：风靡全球](https://so.toutiao.com/search?keyword=苹果CEO库克谈王者荣耀：风靡全球)
-1. [夫妻30岁裸辞旅行治愈百万网友](https://so.toutiao.com/search?keyword=夫妻30岁裸辞旅行治愈百万网友)
 1. [全红婵接受采访“讨价还价”](https://so.toutiao.com/search?keyword=全红婵接受采访“讨价还价”)
-1. [“科目三”舞蹈怎么跳](https://so.toutiao.com/search?keyword=“科目三”舞蹈怎么跳)
 1. [张若昀在杀青现场与粉丝合照](https://so.toutiao.com/search?keyword=张若昀在杀青现场与粉丝合照)
-1. [央广网：杜绝狗咬人要盯住养狗人](https://so.toutiao.com/search?keyword=央广网：杜绝狗咬人要盯住养狗人)
 1. [自然资源部发文建议取消地价上限](https://so.toutiao.com/search?keyword=自然资源部发文建议取消地价上限)
-1. [德国总理朔尔茨走红毯“迷路了”](https://so.toutiao.com/search?keyword=德国总理朔尔茨走红毯“迷路了”)
-1. [华为手机整体销量超越苹果](https://so.toutiao.com/search?keyword=华为手机整体销量超越苹果)
-1. [以色列货币“失血不止”](https://so.toutiao.com/search?keyword=以色列货币“失血不止”)
-1. [被咬伤女童若手术探查或面临摘肾](https://so.toutiao.com/search?keyword=被咬伤女童若手术探查或面临摘肾)
 1. [撒贝宁夫妇带龙凤胎吃西餐](https://so.toutiao.com/search?keyword=撒贝宁夫妇带龙凤胎吃西餐)
 1. [华为云推动欧洲数字化转型](https://so.toutiao.com/search?keyword=华为云推动欧洲数字化转型)
-1. [媒体评“紫薯非薯”争议](https://so.toutiao.com/search?keyword=媒体评“紫薯非薯”争议)
-1. [张若昀《庆余年》第二季杀青](https://so.toutiao.com/search?keyword=张若昀《庆余年》第二季杀青)
-1. [网传威马汽车创始人“出走”海外](https://so.toutiao.com/search?keyword=网传威马汽车创始人“出走”海外)
-1. [郭艾伦：我腿完蛋了](https://so.toutiao.com/search?keyword=郭艾伦：我腿完蛋了)
-1. [宋仲基海外试镜全部被淘汰](https://so.toutiao.com/search?keyword=宋仲基海外试镜全部被淘汰)
 1. [陈海贤：为何总遇到渣男渣女](https://so.toutiao.com/search?keyword=陈海贤：为何总遇到渣男渣女)
-1. [iPhone15Pro被曝生产成本523美元](https://so.toutiao.com/search?keyword=iPhone15Pro被曝生产成本523美元)
-1. [网友去台湾旅游总结8个特点](https://so.toutiao.com/search?keyword=网友去台湾旅游总结8个特点)
-1. [成都济南合肥取消地价限制](https://so.toutiao.com/search?keyword=成都济南合肥取消地价限制)
 1. [研究显示长寿者大多有这3个特点](https://so.toutiao.com/search?keyword=研究显示长寿者大多有这3个特点)
-1. [南航回应飞机餐发4个馒头1片白菜](https://so.toutiao.com/search?keyword=南航回应飞机餐发4个馒头1片白菜)
 1. [高校保安赤手空拳正面硬刚野猪](https://so.toutiao.com/search?keyword=高校保安赤手空拳正面硬刚野猪)
-1. [女子开车去医院 保安称车位已满阻拦](https://so.toutiao.com/search?keyword=女子开车去医院+保安称车位已满阻拦)
 1. [碧桂园所持6368万股权被冻结](https://so.toutiao.com/search?keyword=碧桂园所持6368万股权被冻结)
 1. [俄自爆无人机袭击乌军步兵画面曝光](https://so.toutiao.com/search?keyword=俄自爆无人机袭击乌军步兵画面曝光)
 1. [俄FPV无人机袭击乌军士兵画面曝光](https://so.toutiao.com/search?keyword=俄FPV无人机袭击乌军士兵画面曝光)
 1. [美欲阻止英伟达等出口高性能AI芯片](https://so.toutiao.com/search?keyword=美欲阻止英伟达等出口高性能AI芯片)
 1. [媒体评黄光裕遭国美App弹窗怒怼](https://so.toutiao.com/search?keyword=媒体评黄光裕遭国美App弹窗怒怼)
 1. [内蒙古等地最低气温将降到0℃以下](https://so.toutiao.com/search?keyword=内蒙古等地最低气温将降到0℃以下)
-1. [儿童支原体感染近期高发](https://so.toutiao.com/search?keyword=儿童支原体感染近期高发)
-1. [书展主办方挺以色列 马来西亚退出](https://so.toutiao.com/search?keyword=书展主办方挺以色列+马来西亚退出)
 1. [戴建业说诗歌教育是误入歧途](https://so.toutiao.com/search?keyword=戴建业说诗歌教育是误入歧途)
 1. [江西一轿车撞数辆电动车致多人受伤](https://so.toutiao.com/search?keyword=江西一轿车撞数辆电动车致多人受伤)
 1. [男子跳河轻生 交警下河营救](https://so.toutiao.com/search?keyword=男子跳河轻生+交警下河营救)
@@ -73,7 +87,6 @@
 1. [支原体肺炎低龄化 或致多系统损害](https://so.toutiao.com/search?keyword=支原体肺炎低龄化+或致多系统损害)
 1. [曝日本与越南关系拟升至“最高级”](https://so.toutiao.com/search?keyword=曝日本与越南关系拟升至“最高级”)
 1. [女子闻刚脱下的臭袜子感染真菌肺炎](https://so.toutiao.com/search?keyword=女子闻刚脱下的臭袜子感染真菌肺炎)
-1. [临沂马拉松冠军冲线时志愿者没松绳](https://so.toutiao.com/search?keyword=临沂马拉松冠军冲线时志愿者没松绳)
 1. [大学生私自取回自己的电动车被处分](https://so.toutiao.com/search?keyword=大学生私自取回自己的电动车被处分)
 1. [台积电：已获准于南京工厂持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京工厂持续营运)
 1. [农民工高处坠落被5根钢筋扎穿](https://so.toutiao.com/search?keyword=农民工高处坠落被5根钢筋扎穿)
@@ -100,7 +113,5 @@
 1. [官方回应海陵岛骗秤：严查害群之马](https://so.toutiao.com/search?keyword=官方回应海陵岛骗秤：严查害群之马)
 1. [167名儿童被困在加沙地带的废墟中](https://so.toutiao.com/search?keyword=167名儿童被困在加沙地带的废墟中)
 1. [布林肯在以色列因空袭警报躲进地堡](https://so.toutiao.com/search?keyword=布林肯在以色列因空袭警报躲进地堡)
-1. [阿奇霉素“火出圈”](https://so.toutiao.com/search?keyword=阿奇霉素“火出圈”)
 1. [2024款奥迪A6L上市 售42.79万元起](https://so.toutiao.com/search?keyword=2024款奥迪A6L上市+售42.79万元起)
-1. [苹果将捐款2500万支持中国乡村发展](https://so.toutiao.com/search?keyword=苹果将捐款2500万支持中国乡村发展)
 <!-- END TOUTIAO -->
