--- a/archives/toutiao-search/2023-10-18.md
+++ b/archives/toutiao-search/2023-10-18.md
@@ -1,54 +1,74 @@
 # 2023-10-18
 
-共 110 条
+共 128 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Oct 18 2023 08:24:17 GMT+0800 (China Standard Time) -->
-1. [普京抵达人民大会堂](https://so.toutiao.com/search?keyword=普京抵达人民大会堂)
-1. [女子顶着保安开车入库 医院回应](https://so.toutiao.com/search?keyword=女子顶着保安开车入库+医院回应)
+<!-- 最后更新时间 Wed Oct 18 2023 09:40:48 GMT+0800 (China Standard Time) -->
+1. [塞尔维亚是中国的铁杆朋友](https://so.toutiao.com/search?keyword=塞尔维亚是中国的铁杆朋友)
+1. [男子黄果树景区相机拍照遭大妈阻止](https://so.toutiao.com/search?keyword=男子黄果树景区相机拍照遭大妈阻止)
 1. [全力以赴保障粮食丰收](https://so.toutiao.com/search?keyword=全力以赴保障粮食丰收)
 1. [普京抵达北京哪些信息值得关注](https://so.toutiao.com/search?keyword=普京抵达北京哪些信息值得关注)
-1. [路遇恶犬怎么办？训犬师详解](https://so.toutiao.com/search?keyword=路遇恶犬怎么办？训犬师详解)
+1. [8组数字看懂一带一路](https://so.toutiao.com/search?keyword=8组数字看懂一带一路)
+1. [女子顶着保安开车入库 医院回应](https://so.toutiao.com/search?keyword=女子顶着保安开车入库+医院回应)
 1. [巴以冲突已致双方超4400人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超4400人死亡)
-1. [车主遇人肉占车位 直接下车离开](https://so.toutiao.com/search?keyword=车主遇人肉占车位+直接下车离开)
-1. [杨紫琼等8人当选国际奥委会委员](https://so.toutiao.com/search?keyword=杨紫琼等8人当选国际奥委会委员)
+1. [泥塑作业裂开被女生一巴掌修复](https://so.toutiao.com/search?keyword=泥塑作业裂开被女生一巴掌修复)
 1. [无锡工厂爆燃致2死3伤为假消息](https://so.toutiao.com/search?keyword=无锡工厂爆燃致2死3伤为假消息)
-1. [苹果CEO库克谈王者荣耀：风靡全球](https://so.toutiao.com/search?keyword=苹果CEO库克谈王者荣耀：风靡全球)
+1. [杨紫琼等8人当选国际奥委会委员](https://so.toutiao.com/search?keyword=杨紫琼等8人当选国际奥委会委员)
 1. [曝以色列在消灭哈马斯前不考虑停火](https://so.toutiao.com/search?keyword=曝以色列在消灭哈马斯前不考虑停火)
 1. [女明星外穿钻石内裤惹争议](https://so.toutiao.com/search?keyword=女明星外穿钻石内裤惹争议)
 1. [特朗普对巴以冲突最新表态](https://so.toutiao.com/search?keyword=特朗普对巴以冲突最新表态)
 1. [以称不会因拜登推迟在加沙地面行动](https://so.toutiao.com/search?keyword=以称不会因拜登推迟在加沙地面行动)
-1. [联合国称以色列可能构成国际犯罪](https://so.toutiao.com/search?keyword=联合国称以色列可能构成国际犯罪)
 1. [哈马斯首次公布被扣人质视频画面](https://so.toutiao.com/search?keyword=哈马斯首次公布被扣人质视频画面)
-1. [江映蓉偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=江映蓉偶遇苹果CEO库克)
-1. [外媒：以正将美国拖入与伊朗的战争](https://so.toutiao.com/search?keyword=外媒：以正将美国拖入与伊朗的战争)
-1. [媒体评“紫薯非薯”争议](https://so.toutiao.com/search?keyword=媒体评“紫薯非薯”争议)
-1. [两名缅北电诈头目身份曝光](https://so.toutiao.com/search?keyword=两名缅北电诈头目身份曝光)
-1. [河南一楼盘现“豆腐渣”楼板](https://so.toutiao.com/search?keyword=河南一楼盘现“豆腐渣”楼板)
+1. [联合国称以色列可能构成国际犯罪](https://so.toutiao.com/search?keyword=联合国称以色列可能构成国际犯罪)
+1. [加沙浸信会医院遭袭至少500人死亡](https://so.toutiao.com/search?keyword=加沙浸信会医院遭袭至少500人死亡)
+1. [扶杨紫的小姐姐撞进了邓为怀里](https://so.toutiao.com/search?keyword=扶杨紫的小姐姐撞进了邓为怀里)
+1. [外媒高度关注“一带一路”高峰论坛](https://so.toutiao.com/search?keyword=外媒高度关注“一带一路”高峰论坛)
+1. [加沙医院被炸 拜登访约旦行程取消](https://so.toutiao.com/search?keyword=加沙医院被炸+拜登访约旦行程取消)
 1. [夫妻30岁裸辞旅行治愈百万网友](https://so.toutiao.com/search?keyword=夫妻30岁裸辞旅行治愈百万网友)
-1. [“科目三”舞蹈怎么跳](https://so.toutiao.com/search?keyword=“科目三”舞蹈怎么跳)
-1. [外交部回应日本歌手谷村新司去世](https://so.toutiao.com/search?keyword=外交部回应日本歌手谷村新司去世)
+1. [路遇恶犬怎么办？训犬师详解](https://so.toutiao.com/search?keyword=路遇恶犬怎么办？训犬师详解)
+1. [四川女篮拿下WCBA新赛季开门红](https://so.toutiao.com/search?keyword=四川女篮拿下WCBA新赛季开门红)
+1. [媒体：基层工作要接地气沾“土气”](https://so.toutiao.com/search?keyword=媒体：基层工作要接地气沾“土气”)
+1. [四川宠协秘书长：建议养犬前先考试](https://so.toutiao.com/search?keyword=四川宠协秘书长：建议养犬前先考试)
+1. [84岁钢琴家刘诗昆再当爸](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆再当爸)
+1. [司机帮乘客取行李 自己的车被撞飞](https://so.toutiao.com/search?keyword=司机帮乘客取行李+自己的车被撞飞)
+1. [外媒：以正将美国拖入与伊朗的战争](https://so.toutiao.com/search?keyword=外媒：以正将美国拖入与伊朗的战争)
+1. [车主遇人肉占车位 直接下车离开](https://so.toutiao.com/search?keyword=车主遇人肉占车位+直接下车离开)
+1. [范美忠被范跑跑围困的15年](https://so.toutiao.com/search?keyword=范美忠被范跑跑围困的15年)
+1. [央广网：杜绝狗咬人要盯住养狗人](https://so.toutiao.com/search?keyword=央广网：杜绝狗咬人要盯住养狗人)
+1. [“一带一路”影视国际合作成果发布](https://so.toutiao.com/search?keyword=“一带一路”影视国际合作成果发布)
+1. [德国总理朔尔茨走红毯“迷路了”](https://so.toutiao.com/search?keyword=德国总理朔尔茨走红毯“迷路了”)
+1. [江映蓉偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=江映蓉偶遇苹果CEO库克)
+1. [英伟达A800对华出口将受新规影响](https://so.toutiao.com/search?keyword=英伟达A800对华出口将受新规影响)
+1. [戴建业说诗歌教育是误入歧途](https://so.toutiao.com/search?keyword=戴建业说诗歌教育是误入歧途)
 1. [地球进入“沸腾时代”](https://so.toutiao.com/search?keyword=地球进入“沸腾时代”)
+1. [幼儿园手工作业家长用树叶做了只鸡](https://so.toutiao.com/search?keyword=幼儿园手工作业家长用树叶做了只鸡)
+1. [河南一楼盘现“豆腐渣”楼板](https://so.toutiao.com/search?keyword=河南一楼盘现“豆腐渣”楼板)
+1. [媒体评“紫薯非薯”争议](https://so.toutiao.com/search?keyword=媒体评“紫薯非薯”争议)
+1. [女子开车去医院 保安称车位已满阻拦](https://so.toutiao.com/search?keyword=女子开车去医院+保安称车位已满阻拦)
+1. [研究：爱做饭的人或更长寿](https://so.toutiao.com/search?keyword=研究：爱做饭的人或更长寿)
+1. [华为手机整体销量超越苹果](https://so.toutiao.com/search?keyword=华为手机整体销量超越苹果)
+1. [印尼女外长在北京晨跑](https://so.toutiao.com/search?keyword=印尼女外长在北京晨跑)
+1. [外交部回应日本歌手谷村新司去世](https://so.toutiao.com/search?keyword=外交部回应日本歌手谷村新司去世)
+1. [网传威马汽车创始人“出走”海外](https://so.toutiao.com/search?keyword=网传威马汽车创始人“出走”海外)
+1. [两名缅北电诈头目身份曝光](https://so.toutiao.com/search?keyword=两名缅北电诈头目身份曝光)
+1. [张若昀《庆余年》第二季杀青](https://so.toutiao.com/search?keyword=张若昀《庆余年》第二季杀青)
+1. [苹果CEO库克谈王者荣耀：风靡全球](https://so.toutiao.com/search?keyword=苹果CEO库克谈王者荣耀：风靡全球)
+1. [官方回应海陵岛骗秤：严查害群之马](https://so.toutiao.com/search?keyword=官方回应海陵岛骗秤：严查害群之马)
+1. [普京抵达人民大会堂](https://so.toutiao.com/search?keyword=普京抵达人民大会堂)
+1. [“科目三”舞蹈怎么跳](https://so.toutiao.com/search?keyword=“科目三”舞蹈怎么跳)
 1. [郭艾伦：我腿完蛋了](https://so.toutiao.com/search?keyword=郭艾伦：我腿完蛋了)
 1. [被咬伤女童若手术探查或面临摘肾](https://so.toutiao.com/search?keyword=被咬伤女童若手术探查或面临摘肾)
-1. [华为手机整体销量超越苹果](https://so.toutiao.com/search?keyword=华为手机整体销量超越苹果)
 1. [英格兰3-1双杀意大利晋级欧洲杯](https://so.toutiao.com/search?keyword=英格兰3-1双杀意大利晋级欧洲杯)
-1. [司机帮乘客取行李 自己的车被撞飞](https://so.toutiao.com/search?keyword=司机帮乘客取行李+自己的车被撞飞)
-1. [张若昀《庆余年》第二季杀青](https://so.toutiao.com/search?keyword=张若昀《庆余年》第二季杀青)
-1. [央广网：杜绝狗咬人要盯住养狗人](https://so.toutiao.com/search?keyword=央广网：杜绝狗咬人要盯住养狗人)
 1. [南航回应飞机餐发4个馒头1片白菜](https://so.toutiao.com/search?keyword=南航回应飞机餐发4个馒头1片白菜)
 1. [哈马斯证实一高级指挥官死亡](https://so.toutiao.com/search?keyword=哈马斯证实一高级指挥官死亡)
-1. [网传威马汽车创始人“出走”海外](https://so.toutiao.com/search?keyword=网传威马汽车创始人“出走”海外)
 1. [成都回复“野狗整治”：已部署整治](https://so.toutiao.com/search?keyword=成都回复“野狗整治”：已部署整治)
 1. [宋仲基海外试镜全部被淘汰](https://so.toutiao.com/search?keyword=宋仲基海外试镜全部被淘汰)
 1. [iPhone15Pro被曝生产成本523美元](https://so.toutiao.com/search?keyword=iPhone15Pro被曝生产成本523美元)
 1. [以色列货币“失血不止”](https://so.toutiao.com/search?keyword=以色列货币“失血不止”)
 1. [临沂马拉松冠军冲线时志愿者没松绳](https://so.toutiao.com/search?keyword=临沂马拉松冠军冲线时志愿者没松绳)
-1. [德国总理朔尔茨走红毯“迷路了”](https://so.toutiao.com/search?keyword=德国总理朔尔茨走红毯“迷路了”)
 1. [成都济南合肥取消地价限制](https://so.toutiao.com/search?keyword=成都济南合肥取消地价限制)
 1. [阿奇霉素“火出圈”](https://so.toutiao.com/search?keyword=阿奇霉素“火出圈”)
 1. [苹果将捐款2500万支持中国乡村发展](https://so.toutiao.com/search?keyword=苹果将捐款2500万支持中国乡村发展)
-1. [女子开车去医院 保安称车位已满阻拦](https://so.toutiao.com/search?keyword=女子开车去医院+保安称车位已满阻拦)
 1. [媒体：农忙时节别给农民添乱](https://so.toutiao.com/search?keyword=媒体：农忙时节别给农民添乱)
 1. [书展主办方挺以色列 马来西亚退出](https://so.toutiao.com/search?keyword=书展主办方挺以色列+马来西亚退出)
 1. [儿童支原体感染近期高发](https://so.toutiao.com/search?keyword=儿童支原体感染近期高发)
@@ -76,7 +96,6 @@
 1. [美欲阻止英伟达等出口高性能AI芯片](https://so.toutiao.com/search?keyword=美欲阻止英伟达等出口高性能AI芯片)
 1. [媒体评黄光裕遭国美App弹窗怒怼](https://so.toutiao.com/search?keyword=媒体评黄光裕遭国美App弹窗怒怼)
 1. [内蒙古等地最低气温将降到0℃以下](https://so.toutiao.com/search?keyword=内蒙古等地最低气温将降到0℃以下)
-1. [戴建业说诗歌教育是误入歧途](https://so.toutiao.com/search?keyword=戴建业说诗歌教育是误入歧途)
 1. [江西一轿车撞数辆电动车致多人受伤](https://so.toutiao.com/search?keyword=江西一轿车撞数辆电动车致多人受伤)
 1. [男子跳河轻生 交警下河营救](https://so.toutiao.com/search?keyword=男子跳河轻生+交警下河营救)
 1. [泰国副总理谈共建“一带一路”倡议](https://so.toutiao.com/search?keyword=泰国副总理谈共建“一带一路”倡议)
@@ -110,7 +129,6 @@
 1. [台报社论：民进党陷扩军备战死胡同](https://so.toutiao.com/search?keyword=台报社论：民进党陷扩军备战死胡同)
 1. [外媒记者谈“一带一路”见闻](https://so.toutiao.com/search?keyword=外媒记者谈“一带一路”见闻)
 1. [国美求助：部分银行断贷资金链紧张](https://so.toutiao.com/search?keyword=国美求助：部分银行断贷资金链紧张)
-1. [官方回应海陵岛骗秤：严查害群之马](https://so.toutiao.com/search?keyword=官方回应海陵岛骗秤：严查害群之马)
 1. [167名儿童被困在加沙地带的废墟中](https://so.toutiao.com/search?keyword=167名儿童被困在加沙地带的废墟中)
 1. [布林肯在以色列因空袭警报躲进地堡](https://so.toutiao.com/search?keyword=布林肯在以色列因空袭警报躲进地堡)
 1. [2024款奥迪A6L上市 售42.79万元起](https://so.toutiao.com/search?keyword=2024款奥迪A6L上市+售42.79万元起)
